@@ -1,5 +1,6 @@
 package ssu.cromi.umc9th.domain.review.converter;
 
+import org.springframework.data.domain.Page;
 import ssu.cromi.umc9th.domain.review.dto.ReviewReqDTO;
 import ssu.cromi.umc9th.domain.review.dto.ReviewResDTO;
 import ssu.cromi.umc9th.domain.review.entity.ReviewPictures;
@@ -7,10 +8,38 @@ import ssu.cromi.umc9th.domain.review.entity.UserReview;
 import ssu.cromi.umc9th.domain.store.entity.Store;
 import ssu.cromi.umc9th.domain.user.entity.User;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ReviewConverter {
+    //result -> DTO
+    public static ReviewResDTO.ReviewPreViewListDTO toReviewPreviewListDTO(
+            Page<UserReview> result
+    ){
+        return ReviewResDTO.ReviewPreViewListDTO.builder()
+                .reviewList(result.getContent().stream()
+                        .map(ReviewConverter::toReviewPreviewDTO)
+                        .toList()
+                )
+                .listSize(result.getSize())
+                .totalPage(result.getTotalPages())
+                .totalElements(result.getTotalElements())
+                .isFirst(result.isFirst())
+                .isLast(result.isLast())
+                .build();
+    }
+
+    public static ReviewResDTO.ReviewPreViewDTO toReviewPreviewDTO(
+            UserReview review
+    ){
+        return ReviewResDTO.ReviewPreViewDTO.builder()
+                .ownerNickname(review.getUser().getNickname())
+                .score(review.getScore())
+                .body(review.getReviewText())
+                .createdAt(LocalDate.from(review.getCreatedAt()))
+                .build();
+    }
+
 
     // Entity -> DTO
     public static ReviewResDTO.CreateDTO toCreateDTO(UserReview review, List<String> photoURLs) {
@@ -47,6 +76,32 @@ public class ReviewConverter {
                         .store(store)
                         .imageUrl(url)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+        // 사용자가 작성한 리뷰 목록 조회 - Page<UserReview> -> UserReviewListDTO
+    public static ReviewResDTO.UserReviewListDTO toUserReviewListDTO(Page<UserReview> result) {
+        return ReviewResDTO.UserReviewListDTO.builder()
+                .reviewList(result.getContent().stream()
+                        .map(ReviewConverter::toUserReviewDTO)
+                        .toList()
+                )
+                .listSize(result.getSize())
+                .totalPage(result.getTotalPages())
+                .totalElements(result.getTotalElements())
+                .isFirst(result.isFirst())
+                .isLast(result.isLast())
+                .build();
+    }
+
+    // UserReview -> UserReviewDTO
+    public static ReviewResDTO.UserReviewDTO toUserReviewDTO(UserReview review) {
+        return ReviewResDTO.UserReviewDTO.builder()
+                .reviewId(review.getId())
+                .storeName(review.getStore().getStoreName())
+                .score(review.getScore())
+                .reviewText(review.getReviewText())
+                .createdAt(LocalDate.from(review.getCreatedAt()))
+                .build();
     }
 }
